...
          key: alertDialogKey,
          title: Text(title),
          content: Text(message),
          actions: <Widget>[
            TextButton(
              key: alertDialogOkButtonKey,
              child: const Text('OK'),
              onPressed: () {
                Navigator.of(context).pop();
              },
            ),
          ],
        );
...
